# giraphics

./: .gitignore  CMakeLists.txt  clean.bat  run.bat
Engine/: CMakeLists.txt
Engine/Assets/Shaders/: simple-quad.frag  simple-quad.vert  simple-quad.vert.spv
Engine/Graphics/: GiraphicsPCH.cpp  GiraphicsPCH.hpp  Window.cpp  Window.hpp
Engine/Graphics/Utils/: Utils.hpp
Engine/Graphics/Vulkan/: Device.cpp  Device.hpp  Pipeline.cpp  Pipeline.hpp  SwapChain.cpp  SwapChain.hpp  Vertex.hpp  VulkanContext.cpp  VulkanContext.hpp
Engine/Graphics/Window/: Window.hpp
Engine/Graphics/Window/Glfw/: GlfwWindow.cpp  GlfwWindow.hpp
Sandbox/: CMakeLists.txt  main.cpp
Sandbox/4-Vulkan-Debugging-Capabilities/: main.cpp
Sandbox/Hello-World/: main.cpp
cmake/: BuildTests.cmake  ImportDependencies.cmake  Utilities.cmake
